--- a/src/app/modules/pages/miscellaneous/error/error.component.html
+++ b/src/app/modules/pages/miscellaneous/error/error.component.html
@@ -8,7 +8,7 @@
     <div class="w-100 text-center">
       <h2 class="mb-1">Page Not Found 🕵🏻‍♀️</h2>
       <p class="mb-2">Oops! 😖 The requested URL was not found on this server.</p>
-      <a class="btn btn-primary mb-2 btn-sm-block" routerLink="/" rippleEffect>Back to Home</a
+      <a class="btn btn-primary mb-2 btn-sm-block" href="javascript:void(0);" (click)="goBack()" rippleEffect>{{ 'GoBack' | translate }}</a
       ><img
         class="img-fluid"
         [src]="
