--- a/src/app/modules/problems/pages/statistics/statistics.component.html
+++ b/src/app/modules/problems/pages/statistics/statistics.component.html
@@ -1,32 +1,41 @@
 @if (username) {
   <div class="content-wrapper container-xxl p-0">
     <div class="content-body">
-      <section class="mt-2">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-12">
+      <section class="problems-statistics mt-2">
+        <div class="row g-3 align-items-stretch">
+          <div class="col-xl-4 col-lg-5 col-12">
             <section-profile [username]="username"></section-profile>
           </div>
-          <div class="col-lg-9 col-md-6 col-sm-12">
-            <div class="row">
-              <div class="col-lg-6 col-12">
+
+          <div class="col-xl-8 col-lg-7 col-12">
+            <div class="row g-3 align-items-stretch">
+              <div class="col-md-6 col-12">
                 <section-difficulties [username]="username"></section-difficulties>
               </div>
-              <div class="col-lg-6 col-12">
+              <div class="col-md-6 col-12">
                 <section-activity [username]="username"></section-activity>
               </div>
               <div class="col-12">
                 <section-heatmap [username]="username"></section-heatmap>
               </div>
-              <div class="col-lg-6 col-12">
-                <section-facts [username]="username"></section-facts>
-              </div>
-              <div class="col-lg-6 col-12">
+            </div>
+          </div>
+        </div>
+
+        <div class="row g-3 align-items-stretch">
+          <div class="col-xl-8 col-lg-7 col-12">
+            <div class="row g-3 align-items-stretch">
+              <div class="col-md-6 col-12">
                 <section-attempts-for-solve [username]="username"></section-attempts-for-solve>
               </div>
-              <div class="col-12">
+              <div class="col-md-6 col-12">
                 <section-time [username]="username"></section-time>
               </div>
             </div>
+          </div>
+
+          <div class="col-xl-4 col-lg-5 col-12">
+            <section-facts [username]="username"></section-facts>
           </div>
         </div>
       </section>
